[package]
name = "lum_log"
version = "0.1.2"
authors = ["Torben Schweren"]
edition = "2021"
rust-version = "1.82.0"
description = "lum framework's logging library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_log"
license = "MIT"
keywords = ["lum", "framework", "logging", "log"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

# serde has to be a dependency to use the Serialize and Deserialize derive macros.
# We are still using the implementation from lum_libs, but the macro depends on the serde crate to be present.
[dependencies]
lum_libs = "0.1.3"
serde = { version = "1.0.215", features = ["derive"] }
