[package]
name = "lum_log"
version = "0.2.6"
authors = ["Torben Schweren"]
edition = "2024"
rust-version = "1.85.0"
description = "lum framework's logging library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_log"
license = "MIT"
keywords = ["lum", "framework", "logging", "log"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
lum_libs = { version = "0.2.5", features = ["fern", "humantime", "log"] }
